<resources>
    <string name="app_name">Finzper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_inicio">Inicio</string>

    <string name="title_analisis">Análisis</string>

    <string name="title_conf">Configuración</string>

    <string name="perfil">Perfil</string>

    <string name="guardar">Guardar Cambios</string>

    <string name="cerrar">Cerrar Sesión</string>

    <string name="cat">Categorias</string>

    <string name="newingreso">Añadir Ingreso</string>

    <string name="newgasto">Añadir Gasto</string>

    <string name="ingreso">Ingresos</string>

    <string name="gasto">Gastos</string>

    <string name="nuevogasto">Nuevo Gasto</string>

    <string name="add">Agregar</string>

    <string name="nuevoingreso">Nuevo Ingreso</string>


</resources>