<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".categorias">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/btn_regresar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@color/white"
                    app:srcCompat="@drawable/ic_flecha_izquierda" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cat"
                    android:textAlignment="center"
                    android:textColor="@color/gris_title"
                    android:textSize="33sp" />


            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:background="@color/naranja_navigation" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="25dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/gasto"
                            android:textAlignment="center"
                            android:textColor="@color/gris_title"
                            android:textSize="33sp" />

                        <Button
                            android:id="@+id/btn_registro_gasto"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/btn_registro"
                            android:text="@string/newgasto"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/white"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/ingreso"
                            android:textAlignment="center"
                            android:textColor="@color/gris_title"
                            android:textSize="33sp" />

                        <Button
                            android:id="@+id/btn_registro_ingreso"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/btn_registro"
                            android:text="@string/newingreso"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/white"
                            android:textSize="15dp" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>